--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/db": "^0.14.1",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.1",
     "@fontsource/inter": "^5.0.20",
     "astro": "^4.15.2",
     "svelte": "^4.2.19",
