--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.8.1",
     "@fontsource/inter": "^5.0.20",
+    "arctic": "^1.9.2",
     "astro": "^4.15.2",
+    "lucia": "^3.2.0",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
