--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/db": "^0.14.1",
-    "@astrojs/svelte": "^5.7.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.8.1",
+    "@astrojs/check": "0.9.3",
+    "@astrojs/db": "0.14.0-beta.1",
+    "@astrojs/svelte": "5.7.1",
+    "@astrojs/tailwind": "5.1.1",
+    "@astrojs/vercel": "8.0.0-beta.2",
     "@fontsource/inter": "^5.0.20",
     "arctic": "^1.9.2",
-    "astro": "^4.15.2",
+    "astro": "5.0.0-beta.1",
     "lucia": "^3.2.0",
+    "lucia-adapter-astrodb": "^0.2.0",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
