--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -16,10 +16,7 @@
     "@astrojs/tailwind": "5.1.1",
     "@astrojs/vercel": "8.0.0-beta.2",
     "@fontsource/inter": "^5.0.20",
-    "arctic": "^1.9.2",
     "astro": "5.0.0-beta.1",
-    "lucia": "^3.2.0",
-    "lucia-adapter-astrodb": "^0.2.0",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
