--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@astrojs/tailwind": "5.1.1",
     "@astrojs/vercel": "8.0.0-beta.2",
     "@fontsource/inter": "^5.0.20",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "astro": "5.0.0-beta.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "svelte": "^5.0.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
